[package]
name = "pic-protocol"
edition = "2024"
version.workspace = true
description = "PIC Protocol - Provenance Identity Continuity Protocol"
license = "Apache-2.0"
repository = "https://github.com/pic-protocol/pic-rust"
documentation = "https://docs.rs/pic-protocol"
keywords = ["authorization", "security", "distributed-systems"]
categories = ["authentication", "cryptography"]

[lib]
name = "pic"

[features]
default = []
ssi = ["pic-cat/ssi"]
oauth = ["pic-cat/oauth"]
full = ["ssi", "oauth"]

[workspace]
members = ["crates/*"]

[workspace.package]
edition = "2024"
version = "0.0.0"
license = "Apache-2.0"
repository = "https://github.com/pic-protocol/pic-protocol"

[workspace.dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ciborium = "0.2"
serde_bytes = "0.11"

# Async
tokio = { version = "1", features = ["full"] }

# Error handling
thiserror = "2"
anyhow = "1"

# SSI - Decentralized Identity (SpruceID)
ssi = { version = "0.12", features = ["ed25519", "w3c"] }

# OAuth
oauth2 = "4.4"

# Utilities
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
iref = "3"
static-iref = "3"

# Benchmark
criterion = { version = "0.5", features = ["html_reports"] }

[dependencies]
pic-pca = { path = "crates/pic-pca" }
pic-cat = { path = "crates/pic-cat" }