[package]
name = "pic-cat"
version.workspace = true
edition.workspace = true
description = "CAT (Causal Authority Transition) for PIC Protocol"
license.workspace = true
repository.workspace = true

[lib]
name = "pic_cat"

[features]
default = []
ssi = []
idp = []
full = ["ssi", "idp"]

[dependencies]
pic-pca = { path = "../pic-pca" }
serde.workspace = true