[package]
name = "pic-cat"
version.workspace = true
edition.workspace = true
description = "CAT (Causal Authority Transition) for PIC Protocol"
license.workspace = true
repository.workspace = true

[lib]
name = "pic_cat"

[features]
default = []
ssi = ["dep:ssi"]
oauth = ["dep:oauth2"]
full = ["ssi", "oauth"]

[dependencies]
pic-pca = { path = "../pic-pca" }
serde.workspace = true
serde_json.workspace = true

# Dipendenze opzionali
ssi = { workspace = true, optional = true }
oauth2 = { workspace = true, optional = true }