[package]
name = "pic-pca"
version.workspace = true
edition.workspace = true
description = "PCA and PoC types for PIC Protocol"
license.workspace = true
repository.workspace = true

[lib]
name = "pic_pca"

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_bytes.workspace = true
ciborium.workspace = true

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "pca_serialization"
harness = false